--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
 	<meta http-equiv="pragma" content="no-cache" />
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="styleguide/css/styleguide.css?1446157092" media="all" />
-	<link rel="stylesheet" href="styleguide/css/styleguide-specific.css?1446157092" media="all" />
-	<link rel="stylesheet" href="styleguide/css/vendor/typeahead.css?1446157092" media="all" />
-	<link rel="stylesheet" href="styleguide/css/vendor/prism.css?1446157092" media="all" />
+	<link rel="stylesheet" href="styleguide/css/styleguide.css?1446181776" media="all" />
+	<link rel="stylesheet" href="styleguide/css/styleguide-specific.css?1446181776" media="all" />
+	<link rel="stylesheet" href="styleguide/css/vendor/typeahead.css?1446181776" media="all" />
+	<link rel="stylesheet" href="styleguide/css/vendor/prism.css?1446181776" media="all" />
 	
 	<script src="styleguide/js/vendor/jquery.js"></script>
 </head>
@@ -110,6 +110,7 @@
 						<li class="sg-nav-images"><a class="sg-acc-handle">Images</a><ol class="sg-acc-panel sg-sub-nav">
 							<li><a href="patterns/01-molecules-03-images-00-figure-with-caption/01-molecules-03-images-00-figure-with-caption.html" class="sg-pop  " data-patternpartial="molecules-figure-with-caption">Figure With Caption</a></li>
 							<li><a href="patterns/01-molecules-03-images-01-screenshots/01-molecules-03-images-01-screenshots.html" class="sg-pop  " data-patternpartial="molecules-screenshots">Screenshots</a></li>
+							<li><a href="patterns/01-molecules-03-images-gallery/01-molecules-03-images-gallery.html" class="sg-pop  " data-patternpartial="molecules-gallery">Gallery</a></li>
 							<li><a href="patterns/01-molecules-03-images/index.html" class="sg-pop  " data-patternpartial="viewall-molecules-images">View All</a></li>
 						</ol></li>
 						<li class="sg-nav-navigation"><a class="sg-acc-handle">Navigation</a><ol class="sg-acc-panel sg-sub-nav">
@@ -141,6 +142,7 @@
 						</ol></li>
 						<li class="sg-nav-cards"><a class="sg-acc-handle">Cards</a><ol class="sg-acc-panel sg-sub-nav">
 							<li><a href="patterns/01-molecules-cards-drop-accordion-card/01-molecules-cards-drop-accordion-card.html" class="sg-pop  " data-patternpartial="molecules-drop-accordion-card">Drop Accordion Card</a></li>
+							<li><a href="patterns/01-molecules-cards-simple-tabl/01-molecules-cards-simple-tabl.html" class="sg-pop  " data-patternpartial="molecules-simple-tabl">Simple Tabl</a></li>
 							<li><a href="patterns/01-molecules-cards/index.html" class="sg-pop  " data-patternpartial="viewall-molecules-cards">View All</a></li>
 						</ol></li>
 					</ol></li>
@@ -341,27 +343,27 @@
 	</script>
 	
 	<!-- Included JavaScript that makes everything work -->
-	<script src="styleguide/js/vendor/prism.js?1446157092"></script>
-	<script src="styleguide/js/vendor/jwerty.js?1446157092"></script>
-	<script src="styleguide/js/vendor/classlist-polyfill.js?1446157092"></script>
-	<script src="styleguide/js/vendor/typeahead.bundle.min.js?1446157092"></script>
-	<script src="styleguide/js/data-saver.js?1446157092"></script>
+	<script src="styleguide/js/vendor/prism.js?1446181776"></script>
+	<script src="styleguide/js/vendor/jwerty.js?1446181776"></script>
+	<script src="styleguide/js/vendor/classlist-polyfill.js?1446181776"></script>
+	<script src="styleguide/js/vendor/typeahead.bundle.min.js?1446181776"></script>
+	<script src="styleguide/js/data-saver.js?1446181776"></script>
 	<script>
 	  var ishMinimum           = 240;
 	  var ishMaximum           = 2600;
 		var qrCodeGeneratorOn    = false;
-		var ipAddress            = "129.49.20.7";
+		var ipAddress            = "192.168.69.108";
 		var xipHostname          = "http://patternlab.*.xip.io";
 	</script>	<script>
-		var patternPaths = {"atoms":{"colors":"00-atoms-01-global-00-colors","fonts":"00-atoms-01-global-01-fonts","backgrounds":"00-atoms-01-global-02-backgrounds","widths":"00-atoms-01-global-03-widths","box-model":"00-atoms-01-global-04-box-model","headings":"00-atoms-02-text-00-headings","text":"00-atoms-02-text-01-text","blockquote":"00-atoms-02-text-02-blockquote","inline-elements":"00-atoms-02-text-03-inline-elements","time":"00-atoms-02-text-04-time","preformatted-text":"00-atoms-02-text-05-preformatted-text","hr":"00-atoms-02-text-06-hr","byline":"00-atoms-02-text-07-byline","unordered":"00-atoms-03-lists-00-unordered","ordered":"00-atoms-03-lists-01-ordered","definition":"00-atoms-03-lists-02-definition","logo":"00-atoms-04-images-00-logo","landscape-4x3":"00-atoms-04-images-01-landscape-4x3","landscape-16x9":"00-atoms-04-images-02-landscape-16x9","square":"00-atoms-04-images-03-square","avatar":"00-atoms-04-images-04-avatar","loading-icon":"00-atoms-04-images-06-loading-icon","favicon":"00-atoms-04-images-07-favicon","social":"00-atoms-04-images-08-social","circle-image":"00-atoms-04-images-09-circle-image","rounded":"00-atoms-04-images-10-rounded","flat-circle":"00-atoms-04-images-flat-circle","thumbnail":"00-atoms-04-images-thumbnail","text-fields":"00-atoms-05-forms-00-text-fields","select-menu":"00-atoms-05-forms-01-select-menu","checkbox":"00-atoms-05-forms-02-checkbox","radio-buttons":"00-atoms-05-forms-03-radio-buttons","html5-inputs":"00-atoms-05-forms-04-html5-inputs","buttons":"00-atoms-06-buttons-00-buttons","outline-button":"00-atoms-06-buttons-02-outline-button","rounded-flat-button":"00-atoms-06-buttons-03-rounded-flat-button","rounded-outline-button":"00-atoms-06-buttons-04-rounded-outline-button","sbu-button":"00-atoms-06-buttons-05-sbu-button","simple-button":"00-atoms-06-buttons-06-simple-button","simple-button-fade":"00-atoms-06-buttons-07-simple-button-fade","circle-button":"00-atoms-06-buttons-08-circle-button","service-button":"00-atoms-06-buttons-09-service-button","table":"00-atoms-07-tables-00-table","light-grey-table":"00-atoms-07-tables-01-light-grey-table","tablesaw":"00-atoms-07-tables-02-tablesaw","simple-two-col":"00-atoms-07-tables-03-simple-two-col","icons":"00-atoms-09-icons-00-icons","circle-icon":"00-atoms-09-icons-01-circle-icon"},"molecules":{"byline":"01-molecules-00-text-00-byline","address":"01-molecules-00-text-01-address","heading-group":"01-molecules-00-text-02-heading-group","blockquote-with-citation":"01-molecules-00-text-03-blockquote-with-citation","figure-with-caption":"01-molecules-03-images-00-figure-with-caption","screenshots":"01-molecules-03-images-01-screenshots","primary-nav":"01-molecules-05-navigation-00-primary-nav","footer-nav":"01-molecules-05-navigation-01-footer-nav","breadcrumbs":"01-molecules-05-navigation-02-breadcrumbs","pagination":"01-molecules-05-navigation-03-pagination","tabs":"01-molecules-05-navigation-04-tabs","social-footer":"01-molecules-05-navigation-05-social-footer","social-links":"01-molecules-05-navigation-05-social-links","alert":"01-molecules-07-messaging-00-alert","circle-band-button":"01-molecules-08-buttons-circle-band-button","icon-button":"01-molecules-08-buttons-icon-button","rounded-image-button":"01-molecules-08-buttons-rounded-image-button","simple-blurb":"01-molecules-blurbs-10-simple-blurb","simple-blurb-full":"01-molecules-blurbs-10-simple-blurb-full","simple-blurb-plain":"01-molecules-blurbs-10-simple-blurb-plain","classic-blurb":"01-molecules-blurbs-20-classic-blurb","drop-accordion-card":"01-molecules-cards-drop-accordion-card"},"organisms":{"header":"02-organisms-00-global-00-header","footer":"02-organisms-00-global-01-footer","article-body":"02-organisms-01-article-00-article-body","tab":"02-organisms-04-tabs-tab","accordion":"02-organisms-accordions-01-accordion","alert":"02-organisms-alerts-alert","hero-article":"02-organisms-heros-hero-article","hero-event":"02-organisms-heros-hero-event","hero-modern":"02-organisms-heros-hero-modern","hero-traditional":"02-organisms-heros-hero-traditional","slider":"02-organisms-sliders-slider"},"templates":{"homepage":"03-templates-00-homepage"},"pages":{"homepage":"04-pages-00-homepage","homepage-emergency":"04-pages-00-homepage-emergency","homepage-notification":"04-pages-00-homepage-notification","blog":"04-pages-01-blog","article":"04-pages-02-article"}}
+		var patternPaths = {"atoms":{"colors":"00-atoms-01-global-00-colors","fonts":"00-atoms-01-global-01-fonts","backgrounds":"00-atoms-01-global-02-backgrounds","widths":"00-atoms-01-global-03-widths","box-model":"00-atoms-01-global-04-box-model","headings":"00-atoms-02-text-00-headings","text":"00-atoms-02-text-01-text","blockquote":"00-atoms-02-text-02-blockquote","inline-elements":"00-atoms-02-text-03-inline-elements","time":"00-atoms-02-text-04-time","preformatted-text":"00-atoms-02-text-05-preformatted-text","hr":"00-atoms-02-text-06-hr","byline":"00-atoms-02-text-07-byline","unordered":"00-atoms-03-lists-00-unordered","ordered":"00-atoms-03-lists-01-ordered","definition":"00-atoms-03-lists-02-definition","logo":"00-atoms-04-images-00-logo","landscape-4x3":"00-atoms-04-images-01-landscape-4x3","landscape-16x9":"00-atoms-04-images-02-landscape-16x9","square":"00-atoms-04-images-03-square","avatar":"00-atoms-04-images-04-avatar","loading-icon":"00-atoms-04-images-06-loading-icon","favicon":"00-atoms-04-images-07-favicon","social":"00-atoms-04-images-08-social","circle-image":"00-atoms-04-images-09-circle-image","rounded":"00-atoms-04-images-10-rounded","flat-circle":"00-atoms-04-images-flat-circle","thumbnail":"00-atoms-04-images-thumbnail","text-fields":"00-atoms-05-forms-00-text-fields","select-menu":"00-atoms-05-forms-01-select-menu","checkbox":"00-atoms-05-forms-02-checkbox","radio-buttons":"00-atoms-05-forms-03-radio-buttons","html5-inputs":"00-atoms-05-forms-04-html5-inputs","buttons":"00-atoms-06-buttons-00-buttons","outline-button":"00-atoms-06-buttons-02-outline-button","rounded-flat-button":"00-atoms-06-buttons-03-rounded-flat-button","rounded-outline-button":"00-atoms-06-buttons-04-rounded-outline-button","sbu-button":"00-atoms-06-buttons-05-sbu-button","simple-button":"00-atoms-06-buttons-06-simple-button","simple-button-fade":"00-atoms-06-buttons-07-simple-button-fade","circle-button":"00-atoms-06-buttons-08-circle-button","service-button":"00-atoms-06-buttons-09-service-button","table":"00-atoms-07-tables-00-table","light-grey-table":"00-atoms-07-tables-01-light-grey-table","tablesaw":"00-atoms-07-tables-02-tablesaw","simple-two-col":"00-atoms-07-tables-03-simple-two-col","icons":"00-atoms-09-icons-00-icons","circle-icon":"00-atoms-09-icons-01-circle-icon"},"molecules":{"byline":"01-molecules-00-text-00-byline","address":"01-molecules-00-text-01-address","heading-group":"01-molecules-00-text-02-heading-group","blockquote-with-citation":"01-molecules-00-text-03-blockquote-with-citation","figure-with-caption":"01-molecules-03-images-00-figure-with-caption","screenshots":"01-molecules-03-images-01-screenshots","gallery":"01-molecules-03-images-gallery","primary-nav":"01-molecules-05-navigation-00-primary-nav","footer-nav":"01-molecules-05-navigation-01-footer-nav","breadcrumbs":"01-molecules-05-navigation-02-breadcrumbs","pagination":"01-molecules-05-navigation-03-pagination","tabs":"01-molecules-05-navigation-04-tabs","social-footer":"01-molecules-05-navigation-05-social-footer","social-links":"01-molecules-05-navigation-05-social-links","alert":"01-molecules-07-messaging-00-alert","circle-band-button":"01-molecules-08-buttons-circle-band-button","icon-button":"01-molecules-08-buttons-icon-button","rounded-image-button":"01-molecules-08-buttons-rounded-image-button","simple-blurb":"01-molecules-blurbs-10-simple-blurb","simple-blurb-full":"01-molecules-blurbs-10-simple-blurb-full","simple-blurb-plain":"01-molecules-blurbs-10-simple-blurb-plain","classic-blurb":"01-molecules-blurbs-20-classic-blurb","drop-accordion-card":"01-molecules-cards-drop-accordion-card","simple-tabl":"01-molecules-cards-simple-tabl"},"organisms":{"header":"02-organisms-00-global-00-header","footer":"02-organisms-00-global-01-footer","article-body":"02-organisms-01-article-00-article-body","tab":"02-organisms-04-tabs-tab","accordion":"02-organisms-accordions-01-accordion","alert":"02-organisms-alerts-alert","hero-article":"02-organisms-heros-hero-article","hero-event":"02-organisms-heros-hero-event","hero-modern":"02-organisms-heros-hero-modern","hero-traditional":"02-organisms-heros-hero-traditional","slider":"02-organisms-sliders-slider"},"templates":{"homepage":"03-templates-00-homepage"},"pages":{"homepage":"04-pages-00-homepage","homepage-emergency":"04-pages-00-homepage-emergency","homepage-notification":"04-pages-00-homepage-notification","blog":"04-pages-01-blog","article":"04-pages-02-article"}}
 	</script>	<script>
 		var viewAllPaths = {"atoms":{"global":"00-atoms-01-global","text":"00-atoms-02-text","lists":"00-atoms-03-lists","images":"00-atoms-04-images","forms":"00-atoms-05-forms","buttons":"00-atoms-06-buttons","tables":"00-atoms-07-tables","icons":"00-atoms-09-icons"},"molecules":{"text":"01-molecules-00-text","images":"01-molecules-03-images","navigation":"01-molecules-05-navigation","messaging":"01-molecules-07-messaging","buttons":"01-molecules-08-buttons","blurbs":"01-molecules-blurbs","cards":"01-molecules-cards"},"organisms":{"global":"02-organisms-00-global","article":"02-organisms-01-article","tabs":"02-organisms-04-tabs","accordions":"02-organisms-accordions","alerts":"02-organisms-alerts","heros":"02-organisms-heros","sliders":"02-organisms-sliders"}}
-	</script>	<script src="styleguide/js/url-handler.js?1446157092"></script>
-	<script src="styleguide/js/qrcode-generator.js?1446157092"></script>
-	<script src="styleguide/js/styleguide.js?1446157092"></script>
-	<script src="styleguide/js/pattern-finder.js?1446157092"></script>
-	<script src="styleguide/js/annotations-viewer.js?1446157092"></script>
-	<script src="styleguide/js/code-viewer.js?1446157092"></script>
+	</script>	<script src="styleguide/js/url-handler.js?1446181776"></script>
+	<script src="styleguide/js/qrcode-generator.js?1446181776"></script>
+	<script src="styleguide/js/styleguide.js?1446181776"></script>
+	<script src="styleguide/js/pattern-finder.js?1446181776"></script>
+	<script src="styleguide/js/annotations-viewer.js?1446181776"></script>
+	<script src="styleguide/js/code-viewer.js?1446181776"></script>
 	<script>
 		
 		var autoReloadNav  = true;
@@ -370,6 +372,6 @@
 		var pageFollowPort = 8883;
 		
 	</script>
-	<script src="styleguide/js/synclisteners.js?1446157092"></script>
+	<script src="styleguide/js/synclisteners.js?1446181776"></script>
 </body>
 </html>
